<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <android.support.design.widget.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="@dimen/dp_230"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      >
    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:contentScrim="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:expandedTitleTextAppearance="@style/CollapsingToolbarTitleStyle"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/dp_230"
          android:gravity="center"
          android:background="@color/colorPrimary"
          android:orientation="vertical"
          >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:textSize="@dimen/sp_18"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/about_api"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_marginTop="8dp"
            android:text="@string/about_project"
            />
      </LinearLayout>

      <android.support.v7.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          app:layout_collapseMode="pin"
          />

    </android.support.design.widget.CollapsingToolbarLayout>
  </android.support.design.widget.AppBarLayout>

  <android.support.v4.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_8"
        android:orientation="vertical"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/dp_10"
          android:text="@string/introduce_and_help"
          android:textColor="@color/md_grey_600"
          />

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="16dp"
          android:background="@drawable/bg_about">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/introduce"
            android:textColor="@color/md_grey_800"
            android:textIsSelectable="true"
            android:textSize="14sp"/>
      </RelativeLayout>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/dp_10"
          android:layout_marginTop="@dimen/dp_10"
          android:text="@string/open_source_libraries"
          android:textColor="@color/md_grey_600"/>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/dp_10"
          android:padding="@dimen/dp_16"
          android:background="@drawable/bg_about">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_source_libraries_list"
            android:textColor="@color/md_grey_600"/>
      </RelativeLayout>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/dp_10"
          android:layout_marginTop="@dimen/dp_10"
          android:text="@string/thanks"
          android:textColor="@color/md_grey_600"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/dp_16"
          android:padding="@dimen/dp_16"
          android:background="@drawable/bg_about"
          android:orientation="vertical">

        <TextView
            android:id="@+id/daimajia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            android:text="@string/thank_daimajia"
            android:textColor="@color/md_grey_600"/>

        <TextView
            android:id="@+id/drakeet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            android:text="@string/thank_drakeet"
            android:textColor="@color/md_grey_600"/>

        <TextView
            android:id="@+id/maoruibin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            android:text="@string/thank_maoruibin"
            android:textColor="@color/md_grey_600"/>
      </LinearLayout>

    </LinearLayout>
  </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>